<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="album"
            type="com.example.bostastask.profile.presentation.models.AlbumUiModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".albumdetails.presentation.AlbumDetailsFragment">

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:contentDescription="@string/back_button"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/transparent"
            android:src="@drawable/back"
            app:layout_constraintBottom_toBottomOf="@id/detailsTitle"
            app:layout_constraintEnd_toStartOf="@id/detailsTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/detailsTitle" />

        <TextView
            android:id="@+id/detailsTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="sans-serif-condensed"
            android:maxLines="1"
            android:padding="@dimen/_5ssp"
            android:text="@{album.title}"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/backBtn"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/repellendus_praesentium_debitis_officiis" />

        <View
            android:id="@+id/line"
            android:layout_width="0dp"
            android:layout_height="@dimen/_1ssp"
            android:layout_marginTop="@dimen/_8ssp"
            android:background="@color/line_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detailsTitle" />

        <EditText
            android:id="@+id/searchView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5ssp"
            android:layout_marginTop="@dimen/_8ssp"
            android:layout_marginEnd="@dimen/_5ssp"
            android:background="@drawable/search_back"
            android:drawableStart="@drawable/search_icon"
            android:hint="@string/search_in_images"
            android:inputType="text"
            android:maxLines="1"
            android:padding="@dimen/_8ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_8ssp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/searchView"
            app:spanCount="3"
            tools:listitem="@layout/photo_list_item" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/rv"
            app:layout_constraintEnd_toEndOf="@id/rv"
            app:layout_constraintStart_toStartOf="@id/rv"
            app:layout_constraintTop_toTopOf="@id/rv" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>